--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -110,7 +110,7 @@
         A 24.0, 24.0, 0, 0, 1, 183.0, 0
         Z
     </string>
-
+    <bool name="config_powerDecoupleAutoSuspendModeFromDisplay">true</bool>
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">80px</dimen>
     <dimen name="status_bar_height_landscape">80px</dimen>
